--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="css/index.css" type="text/css" rel="stylesheet">
+  <link href="./css/index.css" type="text/css" rel="stylesheet">
   <script src="index.js"></script>
 </head>
 
