--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <!-- Top Navigation Menu -->
 <div class="topnav">
-  <a href="#home" class="active"><img src="./images/home.png"></a>
+  <a href="#home" class="active"><img src="../scenic_app/images/home.png"></a>
   
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
